Create css file for landing page and add bootstrap and jquery

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Publisher Landing Page</title>
+
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/landing-page.css">
+
+    <script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
   </head>
   <body>
 
