--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Publisher Landing Page</title>
 
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
@@ -11,6 +13,19 @@
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
   </head>
   <body>
+
+    <!-- Header -->
+    <header>
+      <button class="header-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <span class="header-title">Quintype</span>
+      <button class="header-search">
+        <img src="/images/search-blue.svg" height="30px">
+      </button>
+    </header>
 
   </body>
 </html>
