Add footer in landing page

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,23 @@
       </button>
       <span class="header-title">Quintype</span>
       <button class="header-search">
-        <img src="/images/search-blue.svg" height="30px">
+        <img src="/images/search-blue.svg" alt="search logo" height="30px">
       </button>
     </header>
+
+    <!-- Footer -->
+    <footer class="clearfix">
+      <img class="footer-logo hidden-xs" src="/images/shape.svg" alt="quintype logo">
+      <div class="footer-right">
+        <ol class="footer-nav breadcrumb">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms &amp; Conditions</a></li>
+        </ol>
+        <div>Copyright 2016 &copy;</div>
+        <div><b>Powered by Quintype</b></div>
+      </div>
+    </footer>
 
   </body>
 </html>
