Add must read section in landing page

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,47 @@
       </button>
     </header>
 
+    <div>
+
+      <div id="must-reads" class="carousel slide" data-ride="carousel">
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <div class="carousel-image"></div>
+            <div class="carousel-caption">
+              <div class="heading">Lin-Manuel Miranda says Donald Trump is spreading ‘a virulent strain of a virus’</div>
+              <button>Read Story</button>
+            </div>
+          </div>
+          <div class="item">
+            <div class="carousel-image"></div>
+            <div class="carousel-caption">
+              <div class="heading">Lin-Manuel Miranda says Donald Trump is spreading ‘a virulent strain of a virus’</div>
+              <button>Read Story</button>
+            </div>
+          </div>
+          <div class="item">
+            <div class="carousel-image"></div>
+            <div class="carousel-caption">
+              <div class="heading">Lin-Manuel Miranda says Donald Trump is spreading ‘a virulent strain of a virus’</div>
+              <button>Read Story</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#must-reads" role="button" data-slide="prev">
+          <img src="/images/left-arrow.svg" alt="left arrow">
+        </a>
+        <a class="right carousel-control" href="#must-reads" role="button" data-slide="next">
+          <img src="/images/right-arrow.svg" alt="right arrow">
+        </a>
+
+      </div>
+
+    </div>
+
     <!-- Footer -->
     <footer class="clearfix">
       <img class="footer-logo hidden-xs" src="/images/shape.svg" alt="quintype logo">
