Add recent stories section in landing page

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       </button>
     </header>
 
-    <div>
+    <div class="container--background-color container--max-width">
 
       <div id="must-reads" class="carousel slide" data-ride="carousel">
 
@@ -67,6 +67,44 @@
       </div>
 
     </div>
+
+    <section id="recent-stories">
+      <div class="container--max-width">
+        <div class="title">Recent Stories</div>
+        <div class="story clearfix">
+          <div class="story-image"></div>
+          <div class="story-details">
+            <div class="story-section">Travel</div>
+            <div class="story-title">This Is What 300 Calories Look Like, Think Twice Before You Eat!</div>
+            <div class="story-author">Jonnathan Doe</div>
+            <div class="story-posted">Posted 15 min ago</div>
+          </div>
+        </div>
+        <div class="story clearfix">
+          <div class="story-image"></div>
+          <div class="story-details">
+            <div class="story-section underline-pink">Health &amp; Fitness</div>
+            <div class="story-title">This Is What 300 Calories Look Like, Think Twice Before You Eat!</div>
+            <div class="story-author">Jonnathan Doe</div>
+            <div class="story-posted">Posted 15 min ago</div>
+          </div>
+        </div>
+        <div class="story clearfix">
+          <div class="story-image"></div>
+          <div class="story-details">
+            <div class="story-section underline-pink">Health &amp; Fitness</div>
+            <div class="story-title">This Is What 300 Calories Look Like, Think Twice Before You Eat!</div>
+            <div class="story-author">Jonnathan Doe</div>
+            <div class="story-posted">Posted 15 min ago</div>
+          </div>
+        </div>
+        <div class="loader">
+          <span class="circle"></span>
+          <span class="circle"></span>
+          <span class="circle"></span>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer class="clearfix">
