Add food and health section

--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,9 @@
       </button>
     </header>
 
-    <div class="container--background-color container--max-width">
+    <div class="container--background-color">
 
-      <div id="must-reads" class="carousel slide" data-ride="carousel">
-
+      <div id="must-reads" class="container--max-width carousel slide" data-ride="carousel">
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
@@ -55,7 +54,6 @@
             </div>
           </div>
         </div>
-
         <!-- Controls -->
         <a class="left carousel-control" href="#must-reads" role="button" data-slide="prev">
           <img src="/images/left-arrow.svg" alt="left arrow">
@@ -63,14 +61,74 @@
         <a class="right carousel-control" href="#must-reads" role="button" data-slide="next">
           <img src="/images/right-arrow.svg" alt="right arrow">
         </a>
-
       </div>
+
+      <section id="health-section">
+        <div class="container--max-width clearfix">
+          <div class="section-title-wrapper">
+            <div class="section-title">Food &amp; Health</div>
+          </div>
+          <div class="left-container">
+            <div class="story-card clearfix">
+              <div class="story-image"></div>
+              <div class="story-details">
+                <div class="story-title">
+                  This Is What 300 Calories Look Like, Think Twice Before You Eat!
+                </div>
+                <div class="story-author">
+                  Jonnathan Doe
+                </div>
+              </div>
+            </div>
+            <div class="story-card clearfix">
+              <div class="story-image"></div>
+              <div class="story-details">
+                <div class="story-title">
+                  This Is What 300 Calories Look Like, Think Twice Before You Eat!
+                </div>
+                <div class="story-author">
+                  Jonnathan Doe
+                </div>
+              </div>
+            </div>
+            <div class="story-card clearfix">
+              <div class="story-image"></div>
+              <div class="story-details">
+                <div class="story-title">
+                  This Is What 300 Calories Look Like, Think Twice Before You Eat!
+                </div>
+                <div class="story-author">
+                  Jonnathan Doe
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-container">
+            <div class="story-card-big">
+              <div class="story-image"></div>
+              <div class="story-details">
+                <div class="story-title">
+                  Jenny Lawson Is Publishing a New Book and It’s Sort of a Coloring Book
+                </div>
+                <div class="story-info">
+                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled.
+                </div>
+                <div class="story-author">
+                  Jonnathan Doe
+                </div>
+              </div>
+            </div>
+          </div>
+          <a  class="read-more" href="#">Read more -&gt;</a>
+
+        </div>
+      </section>
 
     </div>
 
     <section id="recent-stories">
       <div class="container--max-width">
-        <div class="title">Recent Stories</div>
+        <div class="section-title">Recent Stories</div>
         <div class="story clearfix">
           <div class="story-image"></div>
           <div class="story-details">
