--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
     <div class="container--background-color">
 
-      <div id="must-reads" class="container--max-width carousel slide" data-ride="carousel">
+      <section id="must-reads" class="container--max-width carousel slide" data-ride="carousel">
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
@@ -61,7 +61,75 @@
         <a class="right carousel-control" href="#must-reads" role="button" data-slide="next">
           <img src="/images/right-arrow.svg" alt="right arrow">
         </a>
-      </div>
+      </section>
+
+      <section id="politics-section">
+        <div class="container--max-width clearfix">
+          <div class="section-title-wrapper">
+            <div class="section-title">Politics</div>
+          </div>
+          <div class="left-container">
+            <div class="story-div">
+              <div class="story-text">
+                <div class="title">
+                  Lin-Manuel Miranda says Donald Trump is spreading ‘a virulent strain of a virus’
+                </div>
+                <div class="author">Jonnathan Doe</div>
+              </div>
+            </div>
+          </div>
+          <div class="middle-container">
+            <div class="story-card">
+              <div class="story-image"></div>
+              <div class="story-details">
+                <div class="story-title">
+                  Jenny Lawson Is Publishing a New Book and It’s Sort of a Coloring Book
+                </div>
+                <div class="story-author">
+                  Jonnathan Doe
+                </div>
+              </div>
+            </div>
+            <div class="story-card">
+              <div class="story-details">
+                <div class="story-title">
+                  Airtel Offers 3 GB Free Data A Month To Customers Who Switch To Its 4G Service
+                </div>
+                <div class="story-author">
+                  Alice Doe
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-container clearfix">
+            <div class="story-slides">
+              <div class="title">
+                Airtel Offers 3 GB Free Data A Month To Customers Who Switch To Its 4G Service
+              </div>
+              <div class="author">Alex Parkinson</div>
+            </div>
+            <div class="story-slides">
+              <div class="title">
+                Warning Letter For Ankleshwar Plant Sends Wockhardt Shares To Near 2.5-Year Low
+              </div>
+              <div class="author">Alice Doe</div>
+            </div>
+            <div class="story-slides">
+              <div class="title">
+                Sundar Pichai Launches ‘Digital Unlocked’ Programme
+              </div>
+              <div class="author">Jonnathan Doe</div>
+            </div>
+            <div class="story-slides">
+              <div class="title">
+                Warning Letter For Ankleshwar Plant Sends Wockhardt Shares To Near 2.5-Year Low
+              </div>
+              <div class="author">Alice Doe</div>
+            </div>
+          </div>
+          <a  class="read-more" href="#">Read more -&gt;</a>
+        </div>
+      </section>
 
       <section id="health-section">
         <div class="container--max-width clearfix">
@@ -120,7 +188,6 @@
             </div>
           </div>
           <a  class="read-more" href="#">Read more -&gt;</a>
-
         </div>
       </section>
 
