Add lead section in landing page

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,20 @@
 
     <div class="container--background-color">
 
+      <section id="lead-section" class="container--max-width clearfix">
+        <div class="image"></div>
+        <div class="story-details">
+          <div class="story-section">Science</div>
+          <div class="title">Lin-Manuel Miranda says Donald Trump is spreading ‘a virulent strain of a virus’</div>
+          <div class="info hidden-xs">
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled.
+          </div>
+          <div class="author-image"></div>
+          <div class="author">Alex Parkinson</div>
+          <div class="posted">Posted 15 min ago</div>
+        </div>
+      </section>
+
       <section id="must-reads" class="container--max-width carousel slide" data-ride="carousel">
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
