Add the middle section in landing page

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,62 @@
         </div>
       </section>
 
+      <section id="middle-section">
+        <div class="container--max-width clearfix">
+          <div class="left-container">
+            <div class="story-card">
+              <div class="story-image"></div>
+              <div class="story-details">
+                <div class="story-section">Business</div>
+                <div class="story-title">
+                  Jenny Lawson Is Publishing a New Book and It’s Sort of a Coloring Book
+                </div>
+                <div class="story-info">
+                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled.
+                </div>
+                <div class="story-author">
+                  Jonnathan Doe
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="middle-container">
+            <div class="story-slides">
+              <div class="story-section underline-blue">Travel</div>
+              <div class="title">
+                Airtel Offers 3 GB Free Data A Month To Customers Who Switch To Its 4G Service
+              </div>
+              <div class="author">Alex Parkinson</div>
+            </div>
+            <div class="story-slides">
+              <div class="story-section underline-pink">Health &amp; Fitness</div>
+              <div class="title">
+                Warning Letter For Ankleshwar Plant Sends Wockhardt Shares To Near 2.5-Year Low
+              </div>
+              <div class="author">Alice Doe</div>
+            </div>
+            <div class="story-slides">
+              <div class="story-section underline-yellow">Science</div>
+              <div class="title">
+                Sundar Pichai Launches ‘Digital Unlocked’ Programme
+              </div>
+              <div class="author">Jonnathan Doe</div>
+            </div>
+          </div>
+          <div class="right-container hidden-sm clearfix">
+            <img class="advertisement hidden-xs" src="/images/group-2.svg" alt="advertisement" width="100%">
+            <form class="newsletter-section">
+              <img src="/images/message-copy.svg" alt="message icon">
+              <div class="title">Subscribe to Newsletter</div>
+              <div class="text-field-wrapper">
+                <input type="email" name="email-address" placeholder="Your email">
+              </div>
+              <input type="submit" value="Subscribe">
+            </form>
+          </div>
+        </div>
+      </section>
+
       <section id="must-reads" class="container--max-width carousel slide" data-ride="carousel">
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
