--- a/public/index.html
+++ b/public/index.html
@@ -226,5 +226,19 @@
       </section>
     </script>
 
+    <script type="text/x-handlebars-template" id="recent-story-template">
+      {{#each stories}}
+        <div class="story clearfix">
+          <div class="story-image" style="background-image: url('//quintype-01.imgix.net/{{this.hero-image-s3-key}}')"></div>
+          <div class="story-details">
+            <div class="story-section {{this.sectionClass}}">{{this.storySection}}</div>
+            <div class="story-title">{{this.headline}}</div>
+            <div class="story-author">{{this.author-name}}</div>
+            <div class="story-posted">Posted {{this.posted}} ago</div>
+          </div>
+        </div>
+      {{/each}}
+    </script>
+
   </body>
 </html>
